Added 50% buttons to components

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -153,12 +153,30 @@
 								<h4 style="margin: 16px;">Buttons</h4>
 							</td>
 						</tr>
+
+						<tr>
+							<td align="center" id="buttons">
+								<h4 style="margin: 16px;">Full width</h4>
+							</td>
+
+							<td align="center" id="buttons">
+								<h4 style="margin: 16px;">Half width</h4>
+							</td>
+						</tr>
 						<!-- Large -->
 						<tr>
 							<td>
 								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
 									label: "Sapphire Large Primary",
 									width: "100%",
+									variant: ""
+								})
+							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+									label: "50% Primary",
+									width: "50%",
 									variant: ""
 								})
 							</td>
@@ -172,6 +190,14 @@
 									variant: ""
 								})
 							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
+									label: "50% Primary",
+									width: "50%",
+									variant: ""
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -182,6 +208,14 @@
 									variant: ""
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
+									label: "50% Secondary",
+									width: "50%",
+									variant: ""
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -189,6 +223,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
 									label: "Reversed Sapphire Large Secondary",
 									width: "100%",
+									variant: ""
+								})
+							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
+									label: "50% Secondary",
+									width: "50%",
 									variant: ""
 								})
 							</td>
@@ -203,6 +245,14 @@
 									variant: "small"
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.primary.sapphire.html", {
+									label: "50% Small",
+									width: "50%",
+									variant: "small"
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -210,6 +260,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
 									label: "Reversed Sapphire Small Primary",
 									width: "100%",
+									variant: "small"
+								})
+							</td>
+							
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.primary.sapphire.html", {
+									label: "50% Small",
+									width: "50%",
 									variant: "small"
 								})
 							</td>
@@ -223,6 +281,14 @@
 									variant: "small"
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.secondary.sapphire.html", {
+									label: "50% Secondary",
+									width: "50%",
+									variant: "small"
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -230,6 +296,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
 									label: "Reversed Sapphire Small Secondary",
 									width: "100%",
+									variant: "small"
+								})
+							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.secondary.sapphire.html", {
+									label: "50% Secondary",
+									width: "50%",
 									variant: "small"
 								})
 							</td>
@@ -244,6 +318,14 @@
 									variant: ""
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
+									label: "50% Primary",
+									width: "50%",
+									variant: ""
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -251,6 +333,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
 									label: "Reversed Onyx Large Primary",
 									width: "100%",
+									variant: ""
+								})
+							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
+									label: "50% Primary",
+									width: "50%",
 									variant: ""
 								})
 							</td>
@@ -264,6 +354,14 @@
 									variant: ""
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
+									label: "50% Secondary",
+									width: "50%",
+									variant: ""
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -271,6 +369,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
 									label: "Reversed Onyx Large Secondary",
 									width: "100%",
+									variant: ""
+								})
+							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
+									label: "50% Secondary",
+									width: "50%",
 									variant: ""
 								})
 							</td>
@@ -285,6 +391,14 @@
 									variant: "small"
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.primary.onyx.html", {
+									label: "50% Small",
+									width: "50%",
+									variant: "small"
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -292,6 +406,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
 									label: "Reversed Onyx Small Primary",
 									width: "100%",
+									variant: "small"
+								})
+							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.primary.onyx.html", {
+									label: "50% Small",
+									width: "50%",
 									variant: "small"
 								})
 							</td>
@@ -305,6 +427,14 @@
 									variant: "small"
 								})
 							</td>
+
+							<td>
+								@@include("components/buttons/pills/templates/template.secondary.onyx.html", {
+									label: "50% Secondary",
+									width: "50%",
+									variant: "small"
+								})
+							</td>
 						</tr>
 
 						<tr>
@@ -312,6 +442,14 @@
 								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
 									label: "Reversed Onyx Small Secondary",
 									width: "100%",
+									variant: "small"
+								})
+							</td>
+
+							<td class="dark">
+								@@include("components/buttons/pills/templates/template.msoDark.secondary.onyx.html", {
+									label: "50% Secondary",
+									width: "50%",
 									variant: "small"
 								})
 							</td>
