Reviewed some of the sample email templates

--- a/src/modules/cta-banner/two-column/templates/template.onyx.html
+++ b/src/modules/cta-banner/two-column/templates/template.onyx.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation"class="layout_two-column_fluid">
 				<tr>
-					<td class="column" width="428px">
+					<td class="column" width="404px">
 						@@heading
 						<br>
 						@@paragraph
@@ -16,7 +16,7 @@
 					<td class="column">
 						@@include("components/buttons/pills/templates/template.primary.onyx.html", {
 							label: "Download",
-							width: "98px"
+							width: "100%"
 						})
 					</td>
 				</tr>
