--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -46,24 +46,24 @@
 							<td class="content h-flush">
 								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" width="100%">
+										<td class="column" style="width: 404px;">
 											<h1 class="sans" style="width: 165px;">Lazard Connect</h1>
 											<br>
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
-										<td class="column">
+										<td class="column align-right-md">
 											<!--
 												Component: Pill Button
 												Variant: Primary, Sapphire
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
 													fillcolor="#00539A">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px" class="btn pill">
+											<a target="_blank" href="https://lazard.com/" style="width: 100%" class="btn pill">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
@@ -397,22 +397,22 @@
 							<td class="content h-flush">
 								<table style="width: 100%;" border="0" cellpadding="8px" cellspacing="0" role="presentation" class="layout_two-column_fluid">
 									<tr>
-										<td class="column" width="100%">
+										<td class="column" style="width: 404px;">
 											<h3 class="sans">Explore a New Perspective on AI from Our Team</h3>
 										</td>
-										<td class="column">
+										<td class="column align-right-md">
 											<!--
 												Component: Pill Button
 												Variant: Primary, Onyx
 											-->
 											<!--[if mso]>
 												<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-													style="height:32px;v-text-anchor:middle;color:#ffffff;width:65px;" 
+													style="height:32px;v-text-anchor:middle;color:#ffffff;width:100%;" 
 													fillcolor="#171A1C">
 													<w:anchorlock/>
 													<center class="mso">
 											<![endif]-->
-											<a target="_blank" href="https://lazard.com/" style="width: 65px;" class="btn pill onyx @@variant">
+											<a target="_blank" href="https://lazard.com/" style="width: 100%;" class="btn pill onyx @@variant">
 												<!--[if !mso]><!--><span><!--<![endif]-->Visit<!--[if !mso]><!--></span><!--<![endif]-->
 											</a>
 											<!--[if mso]>
