Added a find/replace task for changing the font weights in the dist folders

--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -32,14 +32,15 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_two-column_fluid">
+								<table style border="0" cellpadding="8px" cellspacing="0" role="presentation" width="100%" class="layout_mobile-one-column">
 									<tr>
-										<td class="column" style="width: 404px;">
-											<h1 class="sans" style="width: 202px;">Engage @ Lazard</h1>
+										<td class="column" style="width: 220px;">
+											<h1 class="sans">Engage @ Lazard</h1>
 											<br>
 											<h2 class="subheadline">New Ideas, New Perspectives.</h2>
 										</td>
-										<td class="column align-right-md">
+										<td class="column"></td>
+										<td class="column align-right-md" style="width: 128px;">
 											<!--
 												Component: Pill Button
 												Variant: Primary, Sapphire
@@ -84,7 +85,7 @@
 										<td class="column" style="width: 404px;">
 											<h3 class="sans">Introducing Lazard Global Listed Infrastructure Active ETF <span class="nowrap">(Cboe: GIFL)</span></h3>	
 										</td>
-										<td class="column">
+										<td class="column align-right-md">
 											<!--
 												Component: Pill Button
 												Variant: Primary, MSO Dark, Sapphire
@@ -606,7 +607,7 @@
 										<td class="column" style="width: 404px;">
 											<p class="paragraph-2">For more information on Lazard Asset Management's capabilities, visit <a href="lazardassetmanagement.com" target="_blank" class="link-2">lazardassetmanagement.com.</a></p>
 										</td>
-										<td class="column">
+										<td class="column align-right-md">
 											<!--
 												Component: Pill Button
 												Variant: Primary, MSO Dark, Sapphire
