--- a/src/templates/em-monitor.html
+++ b/src/templates/em-monitor.html
@@ -68,12 +68,12 @@
 								-->
 								<!--[if mso]>
 									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-										style="height:32px;v-text-anchor:middle;color:#ffffff;width:50%;" 
+										style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;" 
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 50%" class="btn pill @@variant">
+								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill @@variant">
 									<!--[if !mso]><!--><span><!--<![endif]-->Read Emerging Markets Monitor<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
@@ -110,12 +110,12 @@
 								-->
 								<!--[if mso]>
 									<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-										style="height:32px;v-text-anchor:middle;color:#ffffff;width:25%;"
+										style="height:32px;v-text-anchor:middle;color:#ffffff;width:98px;"
 										fillcolor="#00539A">
 										<w:anchorlock/>
 										<center class="mso">
 								<![endif]-->
-								<a target="_blank" href="https://lazard.com/" style="width: 25%" class="btn pill">
+								<a target="_blank" href="https://lazard.com/" style="width: 98px" class="btn pill">
 									<!--[if !mso]><!--><span><!--<![endif]-->Learn More<!--[if !mso]><!--></span><!--<![endif]-->
 								</a>
 								<!--[if mso]>
