Added cellpadding 0 to tables for DW

--- a/src/components/components.html
+++ b/src/components/components.html
@@ -4,7 +4,7 @@
 			<tr>
 				<td class="frame"></td>
 				<td class="content">
-					<table cellpadding="8px" width="100%" role="presentation">
+					<table cellpadding="8px" cellspacing="0" width="100%" role="presentation">
 
 						<tr>
 							<td align="center" id="Headlines" colspan="2">
@@ -15,21 +15,21 @@
 						<tr>
 							<td>
 								<h1>Headline 1</h1>
-								<br>
+								
 								<h2>Headline 2</h2>
-								<br>
+								
 								<h3>Headline 3</h3>
-								<br>
+								
 								<h4>Headline 4</h4>
 							</td>
 
 							<td>
 								<h1 class="sans">Headline 1</h1>
-								<br>
+								
 								<h2 class="sans">Headline 2</h2>
-								<br>
+								
 								<h3 class="sans">Headline 3</h3>
-								<br>
+								
 								<h4 class="sans">Headline 4</h4>
 							</td>
 						</tr>
@@ -43,9 +43,9 @@
 						<tr>
 							<td>
 								<h1 class="subheadline">Subheadline 1</h1>
-								<br>
+								
 								<h2 class="subheadline">Subheadline 2</h2>
-								<br>
+								
 								<h3 class="subheadline">Subheadline 3</h3>
 							</td>
 						</tr>
@@ -59,9 +59,9 @@
 						<tr>
 							<td>
 								<p>Paragraph 1</p>
-								<br>
+								
 								<p class="paragraph-2">Paragraph 2</p>
-								<br>
+								
 								<p class="paragraph-3">Paragraph 3</p>
 							</td>
 						</tr>
@@ -87,7 +87,7 @@
 						<tr>
 							<td>
 								<a href="http://www.lazard.com">Link 1</a>
-								<br>
+								
 								<a href="http://www.lazard.com" class="link-2">Link 2</a>
 							</td>
 						</tr>
@@ -132,7 +132,7 @@
 											<li>Outlook on the United Kingdom</li>
 									</ul>
 								</div>
-								<br>
+								
 							</td>
 
 							<td>
@@ -144,7 +144,7 @@
 											<li class="link-2"><a target="_blank" href="https://lazard.com">Outlook on the United Kingdom</a></li>
 									</ul>
 								</div>
-								<br>
+								
 							</td>
 						</tr>
 
