--- a/src/modules/footer-disclaimer/one-column/templates/template.html
+++ b/src/modules/footer-disclaimer/one-column/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px" role="presentation">
+			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 54px;" class="column nowrap">
 						<a target="_blank" href="https://{{my.Footer LinkedIn URL}}" style="text-decoration: none;">
