--- a/src/modules/three-column-contents/speaker/templates/template.html
+++ b/src/modules/three-column-contents/speaker/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="0px" role="presentation">
+			<table style="width: 100%;" cellpadding="0px" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
 					<td class="column align-right-md">
 						<!-- <img style="width:124px;" src="@@imgBase/@@imgSrc"  alt="Bio Image"> -->
