--- a/src/modules/two-column-contents/strategy-card/templates/template.html
+++ b/src/modules/two-column-contents/strategy-card/templates/template.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="" cellpadding="8px" class="w-100" align="" role="presentation">
+			<table style="" cellpadding="8px" cellspacing="0" class="w-100" align="" role="presentation">
 				<tr class="layout_two-column layout_mobile-one-column" align="center">
 					<td style="width: 194px;" class="column align-right-md">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Strategy thumbnail" width="194" class="d-block"> -->
