--- a/src/templates/engage-lazard.html
+++ b/src/templates/engage-lazard.html
@@ -126,7 +126,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content">
-								<table style cellpadding="8px" class="w-100" align role="presentation">
+								<table style cellpadding="8px" cellspacing="0" class="w-100" align role="presentation">
 									<tr class="layout_two-column layout_mobile-one-column" align="center">
 										<td style="width: 194px;" class="column align-right-md">
 											<!-- <img src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_GIFL.png" alt="Strategy thumbnail" width="194" class="d-block"> -->
@@ -166,7 +166,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style cellpadding="8px" class="w-100" role="presentation">
+								<table style cellpadding="8px" cellspacing="0" class="w-100" role="presentation">
 									<tr class="layout_two-column">
 										<td class="column">
 											<!-- <img style="" src="https://info.lazardassetmanagement.com/rs/394-MLC-997/images/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
@@ -183,7 +183,7 @@
 			
 											<h3 class="subheadline">Australia</h3>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -216,7 +216,7 @@
 			
 											<h3 class="subheadline">Australia</h3>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -249,7 +249,7 @@
 			
 											<h3 class="subheadline">Australia</h3>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -296,7 +296,7 @@
 			
 											<h3 class="subheadline">Australia</h3>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -329,7 +329,7 @@
 			
 											<h3 class="subheadline">Australia</h3>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -362,7 +362,7 @@
 			
 											<h3 class="subheadline">Australia</h3>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -543,7 +543,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style="width: 100%;" cellpadding="8px" role="presentation">
+								<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 									<tr class="layout_mobile-one-column">
 										<td width="124" style="font-size:1px; line-height:21px;" class="column">&nbsp;</td>
 										<td class="column">
