--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -33,24 +33,19 @@
 
 			<tr>
 				<td align="center">
-					@@include( "modules/two-column-contents/speaker/templates/template.html", {
-						variant: "parchment",
-						imgSrc: "LAM_Bio_2.png",
-						name: "First, Last Name",
-						email: "eduardo.mora@lazard.com",
-						phone: "+1 212 632 1325"
+					@@include( "modules/cta-banner/one-column/templates/template.dark.html", {
+						variant: "sapphire",
+						heading: "<h2 class='sans margin-b-16'>Explore a New Perspective on AI from Our Team</h2>",
+						paragraph: "<p class='paragraph-2 margin-b-16'>Enclosed is the monthly factor report detailing those factors that influenced regional and global equity performance in May 2024 as well as over extended time periods.</p>"
 					} )
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
-					@@include( "modules/three-column-contents/speaker/templates/template.html", {
-						variant: "sage",
-						imgSrc: "LAM_Bio_2.png",
-						name: "Last, First Name",
-						phone: "1 212 632 1325",
-						email: "eduardo.mora@lazard.com"
+					@@include( "modules/email-banner/two-column/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_Feature_Lake.png"
 					} )
 				</td>
 			</tr>
