--- a/src/components/buttons/open-in-new/template.dark.html
+++ b/src/components/buttons/open-in-new/template.dark.html
@@ -1,4 +1,4 @@
-<table cellspacing="0px" role="presentation" class="btn open-in-new">
+<table cellpadding="0" cellspacing="0px" role="presentation" class="btn open-in-new">
 	<tr>
 		<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 			<!--[if mso]>
