--- a/src/components/buttons/open-in-new/template.html
+++ b/src/components/buttons/open-in-new/template.html
@@ -1,4 +1,4 @@
-<table role="presentation" class="btn open-in-new">
+<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 	<tr>
 		<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 			<!--[if mso]>
