--- a/src/components/buttons/pills/templates/template.msoDark.primary.sapphire.html
+++ b/src/components/buttons/pills/templates/template.msoDark.primary.sapphire.html
@@ -4,7 +4,7 @@
 -->
 <!--[if mso]>
 	<v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" rel="noopener" target="_blank" href="https://lazard.com/" arcsize="50%" stroke="f" 
-		style="height:32px;v-text-anchor:middle;color:#00539A;width:@@width;" 
+		style="display:block;height:32px;v-text-anchor:middle;color:#00539A;width:@@width;" 
 		fillcolor="#ffffff">
 		<w:anchorlock/>
 		<center class="mso">
