--- a/src/modules/three-column-contents/content/templates/template.onyx.html
+++ b/src/modules/three-column-contents/content/templates/template.onyx.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px" role="presentation">
+			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_three-column">
 					<td style="width: 123px;" class="column">
 						<h3>What's trending</h3>
