--- a/src/modules/thumbnail-grid/templates/template.onyx.html
+++ b/src/modules/thumbnail-grid/templates/template.onyx.html
@@ -8,7 +8,7 @@
 		<td class="content h-flush">
 			<h4 class="center">Subscribe to Our Flagship Insights</h4>
 			<br>
-			<table style="width: 100%;" cellpadding="8px" role="presentation">
+			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_two-column">
 					<td style="" class="column">
 						<!-- <img src="@@imgBase/@@imgSrc" alt="Feature image"> -->
