--- a/src/modules/two-column-contents/full-content/templates/template.dark.html
+++ b/src/modules/two-column-contents/full-content/templates/template.dark.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="" cellpadding="8px" class="w-100" role="presentation">
+			<table style="" cellpadding="8px" cellspacing="0" class="w-100" role="presentation">
 				<tr class="layout_two-column">
 					<td class="column">
 						<!-- <img style="" src="@@imgBase/LAM_ContentImage_Field.png" alt="First Column Feature image" width="263" border="0" class="d-block"> -->
