--- a/src/modules/two-column-contents/speaker/templates/template.html
+++ b/src/modules/two-column-contents/speaker/templates/template.html
@@ -2,7 +2,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content">
-			<table style="width: 100%;" role="presentation">
+			<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 124px;" class="column margin-b-16 padding-r-16">
 						<!-- <img style src="@@imgBase/@@imgSrc" alt="Speaker thumbnail"> -->
