--- a/src/modules/two-column-contents/title-left/templates/template.dark.onyx.html
+++ b/src/modules/two-column-contents/title-left/templates/template.dark.onyx.html
@@ -6,7 +6,7 @@
 	<tr>
 		<td class="frame"></td>
 		<td class="content h-flush">
-			<table style="width: 100%;" cellpadding="8px" role="presentation">
+			<table style="width: 100%;" cellpadding="8px" cellspacing="0" role="presentation">
 				<tr class="layout_mobile-one-column">
 					<td style="width: 104px" class="column">
 						<h3 class="">Back on Track?</h3>
