--- a/src/templates/lazard-connect.html
+++ b/src/templates/lazard-connect.html
@@ -92,7 +92,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style="width: 100%;" role="presentation">
+								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 									<tr class="layout_three-column">
 										<td style="width: 107px;" class="column">
 											<h3 class="sans">What's trending</h3>
@@ -104,7 +104,7 @@
 											<br>
 											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -134,7 +134,7 @@
 												</tr>
 											</table>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -164,7 +164,7 @@
 												</tr>
 											</table>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -221,7 +221,7 @@
 						<tr>
 							<td class="frame"></td>
 							<td class="content h-flush">
-								<table style="width: 100%;" role="presentation">
+								<table style="width: 100%;" cellpadding="0" cellspacing="0" role="presentation">
 									<tr class="layout_three-column">
 										<td style="width: 107px;" class="column">
 											<h3 class="sans">What's trending</h3>
@@ -233,7 +233,7 @@
 											<br>
 											<p class="paragraph-2">The global outlook has brightened in 2024 despite some disappointing news along the way. Ronald Temple, Chief Market Strategist, analyzes the forces that stand to impact global markets as the second half of 2024 unfolds, including the results of a razor's-edge US election, China's ongoing housing challenges, and potential Eurozone policy easing.</p>											
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -263,7 +263,7 @@
 												</tr>
 											</table>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
@@ -293,7 +293,7 @@
 												</tr>
 											</table>
 											<br>
-											<table role="presentation" class="btn open-in-new">
+											<table role="presentation" cellpadding="0" cellspacing="0" class="btn open-in-new">
 												<tr>
 													<td rowspan="2" style="vertical-align: middle;" class="padding-r-8">
 														<!--[if mso]>
