--- a/src/templates/test.html
+++ b/src/templates/test.html
@@ -43,9 +43,34 @@
 
 			<tr>
 				<td align="center">
+					@@include( "modules/one-column-contents/basic/templates/template.html", {
+						variant: "parchment",
+						imgSrc: "LAM_ContentImage_1YGraph.png"
+					} )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
 					@@include( "modules/email-banner/two-column/templates/template.html", {
 						variant: "parchment",
 						imgSrc: "LAM_Feature_Lake.png"
+					} )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/basic/templates/template.html", {
+						variant: "parchment"
+					} )
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					@@include( "modules/tables/numbered/templates/template.html", {
+						variant: "currency dark"
 					} )
 				</td>
 			</tr>
